[package]
name = "chip8-rs"
version = "0.1.0"
authors = ["Matthew Taylor <matt@cyberbacon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
derive-try-from-primitive = "1.0.0"
pretty-hex = "0.2.1"
rand = "0.8.3"
